--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -53,7 +53,7 @@
 .chat-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
   width: 100%;
   background-color: #36393f; /* Discord's dark background */
   border-radius: 10px;
